<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.bigbase</groupId>
    <artifactId>sidecar</artifactId>
    <packaging>jar</packaging>
    <name>Sidecar File System</name>
    <version>0.6.0</version>
    <properties>    
	<carrot-cache.version>0.16.1</carrot-cache.version>
    	<hadoop.version>2.10.2</hadoop.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <url>http://www.server.com</url>
    <build>
        <plugins>
           <plugin>
        	<groupId>org.apache.maven.plugins</groupId>
        	<artifactId>maven-javadoc-plugin</artifactId>
        	<version>3.4.1</version>
      	   </plugin>
              <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <!--release>8</release-->
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.4</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
       <version>2.4</version>
       <executions>
         <execution>
           <goals>
             <goal>test-jar</goal>
           </goals>
         </execution>
       </executions>
     </plugin>
     <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>-Xmx4g --add-opens java.base/java.nio=ALL-UNNAMED</argLine>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <excludes>
		    </excludes>
                    <systemProperties>
                        <property>
                            <name>surefire</name>
                            <value>true</value>
                        </property>
                    </systemProperties>
                    <systemPropertyVariables>
                        <property>
                            <name>configurationFile</name>
                            <value>${project.build.directory}/conf/log4j2-console.xml</value>
                        </property>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
    </plugins>
    </build>
    <!--dependencyManagement-->
        <dependencies>
        <dependency>
                <groupId>org.apache.hadoop</groupId>
                <artifactId>hadoop-client</artifactId>
                <version>${hadoop.version}</version>
                <exclusions>
                	<exclusion>
                		<groupId>org.apache.zookeeper</groupId>
                		<artifactId>zookeeper</artifactId>
                	</exclusion>
                </exclusions>
        </dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-aws -->
	<dependency>
    		<groupId>org.apache.hadoop</groupId>
    		<artifactId>hadoop-aws</artifactId>
    		<version>${hadoop.version}</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-azure -->
	<dependency>
    		<groupId>org.apache.hadoop</groupId>
    		<artifactId>hadoop-azure</artifactId>
    		<version>${hadoop.version}</version>
	</dependency>
	<dependency>
    		<groupId>org.apache.hadoop</groupId>
    		<artifactId>hadoop-azure-datalake</artifactId>
    		<version>${hadoop.version}</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-openstack -->
	<dependency>
    		<groupId>org.apache.hadoop</groupId>
    		<artifactId>hadoop-openstack</artifactId>
    		<version>${hadoop.version}</version>
        </dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-aliyun -->
	<dependency>
    		<groupId>org.apache.hadoop</groupId>
    		<artifactId>hadoop-aliyun</artifactId>
    		<version>${hadoop.version}</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.google.cloud.bigdataoss/gcs-connector -->
	<dependency>
    		<groupId>com.google.cloud.bigdataoss</groupId>
    		<artifactId>gcs-connector</artifactId>
    		<version>hadoop2-2.2.10</version>
	</dependency>
        <dependency>
		<groupId>com.carrotdata</groupId>
                <artifactId>carrot-cache</artifactId>
                <version>${carrot-cache.version}</version>
        </dependency>
	<!--dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>2.17.2</version>
       </dependency-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
        </dependency>
	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
	<!--dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-core</artifactId>
    		<version>4.6.1</version>
    		<scope>test</scope>
	</dependency-->
	<!--dependency>
   		<groupId>com.esotericsoftware.kryo</groupId>
   		<artifactId>kryo5</artifactId>
   		<version>5.3.0</version>
	</dependency-->
      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
        <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>3.6.1</version>
                <scope>test</scope>
        </dependency>
        </dependencies>
    <!--/dependencyManagement-->
</project>

